# QueryX

./: .gitignore  COMMAND_PALETTE_FIX.md  CONFIRMATION_MODALS_SUMMARY.md  EDITABLE_RESULTS_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  LINUX_SAFE_MODE_IMPLEMENTATION.md  MULTI_STATEMENT_IMPLEMENTATION.md  MULTI_STATEMENT_USAGE_EXAMPLES.md  OPTIMIZATIONS_SUMMARY.md  OPTIONAL_DATABASE_IMPLEMENTATION.md  OPTIONAL_DATABASE_USAGE.md  PERFORMANCE_OPTIMIZATIONS.md  QUERYX_REBRAND.md  README.md  REDESIGN_SUMMARY.md  TESTING_GUIDE.md  UI_REDESIGN_COMPLETE.md  VISUAL_CHANGES.md  WORKSPACE_IMPLEMENTATION.md  check-dependencies.sh  fix-deb-dependencies.sh  fix-javascriptcore.sh  fix-webkit-libs.sh  index.html  install-deb.sh  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/application/use_cases/: connection_use_case.rs  mod.rs  query_use_case.rs  saved_query_use_case.rs  schema_use_case.rs  workspace_use_case.rs
src-tauri/src/commands/: app_commands.rs  connection_commands.rs  export_commands.rs  mod.rs  query_commands.rs  saved_query_commands.rs  schema_commands.rs  workspace_commands.rs
src-tauri/src/domain/: error.rs  mod.rs
src-tauri/src/domain/entities/: connection.rs  mod.rs  query.rs  saved_query.rs  schema.rs  workspace.rs
src-tauri/src/domain/ports/: connection_repository.rs  credential_store.rs  event_bus.rs  mod.rs  query_history_repository.rs  saved_query_repository.rs  sql_driver.rs  (+1 more)
src-tauri/src/infrastructure/: mod.rs
src-tauri/wix/: main.wxs  registry.wxs
(+101 files in other folders)
