[package]
name = "sqlforge"
version = "0.1.0"
description = "Professional SQL Database Manager"
authors = ["SQLForge Team"]
license = "MIT"
repository = "https://github.com/saidmix01/QueryX"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [ "dialog-all", "window-all", "path-all", "fs-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
umya-spreadsheet = "0.9"

# Database drivers
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "mysql",
    "sqlite",
    "chrono",
    "uuid",
    "json"
] }

# Security - OS Keychain (cross-platform: Windows Credential Manager, macOS Keychain, Linux Secret Service)
keyring = "2.3"

# URL encoding for connection strings
urlencoding = "2.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Connection pooling
deadpool = "0.10"

# Event system
tokio-stream = "0.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
